# kindle-to-obsidian-exporter

./: .gitignore  README.md  package-lock.json  package.json
docs/: index.html
src/: index.html  main.js  tauri-api.js
src-tauri/: Cargo.toml  tauri.conf.json
